# opengl-starter

./: .gitignore  CMakeLists.txt
Chapter01/: CMakeLists.txt
Chapter01/GLFW/: CMakeLists.txt  main.cpp
Chapter02/: CMakeLists.txt
Chapter02/Shaders/: main.cpp
Chapter02/Textures/: main.cpp
Chapter02/Triangle/: main.cpp
Chapter03/: CMakeLists.txt
Chapter03/Transformations/: main.cpp
lesson1/: CMakeLists.txt  main.cpp
